2000-07-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c: Specifically track manycastserver and
	survivors
	From: Dave Mills

2000-07-26  Sven Dietrich  <sven_dietrich@trimble.com>

	* ntpd/ntpd.c: remove WINNT priority adjustment to the ports/winnt area
	where it does not clutter up the main distribution.

2000-07-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (receive): dstadr_sin needs  higher visibility
	From: Dave Mills

	* flock-build: Added baldwin

	* ntpd/ntp_request.c: 
	* ntpd/ntp_proto.c: 
	* ntpd/ntp_peer.c: 
	* ntpd/ntp_io.c: 
	* ntpd/ntp_intres.c: 
	* ntpd/ntp_crypto.c (make_keylist): 
	* ntpd/ntp_control.c: 
	* ntpd/ntp_config.c (CONF_MOD_IBURST, save_resolve): 
	* include/ntpd.h (findpeerbyassoc, newpeer, peer_config, *_interface): 
	* include/ntp_request.h (CONF_FLAG_IBURST): 
	* include/ntp_crypto.h (crypto_xmit, make_keylist): 
	* include/ntp.h (FLAG_IBURST): 
	* html/release.htm: 
	* html/confopt.htm: 
	* html/assoc.htm: 
	Add iburst option, fix broadcast/multicast and some types.
	From: Dave Mills

2000-07-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/Makefile.am (bin_SCRIPTS): Install ntp-wait

	* configure.in: 4.0.99k

2000-07-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (peer_xmit): PUBKEY cleanup

2000-07-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99j5

	* html/ntpd.htm (HREF): Document other missing command-line options

	* html/ntpd.htm (HREF): Document
	* html/confopt.htm (href): Undocument
	* ntpd/ntp_config.c (getconfig): -N high for high-priority.
	Lose the ntp.conf way of setting priority.
	
	* ntpd/ntp_crypto.c: PUBKEY/AUTOKEY cleanup
	From Dave Mills

2000-07-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/confopt.htm (href): Document it.
	* ntpd/ntp_config.c (getconfig): CONFIG_PRIORITY support
	* ntpd/ntpd.c (set_process_priority): Use it.

	* ntpd/ntp_crypto.c: Crypto key stuff
	* ntpd/ntp_proto.c: pubkey -> pubkey.ptr